<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="user_profile">Mi cuenta</string>


    <!-- Auth -->
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_up">Crear cuenta</string>
    <string name="btn_google">Ingresa con Google</string>
    <string name="btn_facebook">Ingresa con Facebook</string>
    <string name="btn_email">Ingresa con Email</string>
    <!-- emailAuth -->
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_dialog_message">Enviaremos un link a tu correo: %s con las instrucciones para restablecer tu contraseña</string>
    <string name="reset_password_email_sent">Se ha enviado un link a tu correo para restablecer tu contraseña.</string>

    <!-- phoneNumber strings -->
    <string name="phone">Teléfono</string>
    <string name="prefix_phone_number">+57 </string>
    <string name="data_has_been_correctly_updated">Los datos se han actualizado correctamente.</string>
    <string name="add_phone_number">Agrega un número de teléfono</string>
    <string name="add_phone_number_description">Enviaremos un código de verificación mediante sms a este número de teléfono.</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="sms_code">SMS Code</string>
    <string name="verify_phone_number">Verifica tu número de teléfono</string>
    <string name="verify_phone_number_description">Ingresa el código que hemos enviado al número %s</string>
    <string name="resend_code">¿No has recibido el código? <br/> <b>Reenviar</b></string>
    <string name="code_has_been_resent">Se ha enviado el código.</string>
    <string name="verify">Verificar</string>


    <!-- Failures -->
    <string name="failure_auth_generic">Ha ocurrido un error. Intenta de nuevo más tarde.</string>

    <!-- SignInState -->
    <string name="failure_not_signed_in">No has iniciado sesión.</string>

    <!-- WrongInput -->
    <string name="failure_empty_field">Campo vacío.</string>
    <string name="failure_short_field_m">El %1$s debe tener al menos %2$d caracteres.</string>
    <string name="failure_short_field_f">La %1$s debe tener al menos %2$d caracteres.</string>
    <string name="failure_invalid_field_m">Por favor ingresa un %s válido.</string>
    <string name="failure_invalid_field_f">Por favor ingresa una %s válida.</string>
    <string name="failure_incorrect_field_m">El %s es incorrecto.</string>
    <string name="failure_incorrect_field_f">La %s es incorrecta.</string>

    <!-- WrongSignInMethod -->
    <string name="failure_not_linked_sign_in_method">Este correo ya se encuentra registrado. Para iniciar sesión accede mediante %s en la pantalla anterior.</string>
    <string name="failure_new_user">Este correo aún no está registrado. Crea una cuenta para continuar.</string>
    <string name="failure_existent_user">Este correo ya se encuentra registrado. Para crear una cuenta usa un correo diferente, o prueba iniciando sesión.</string>

    <!-- Auth Phone Number -->
    <string name="failure_invalid_request_phone_number">Petición inválida. Revisa el número de teléfono ingresado.</string>
    <string name="failure_code_has_expired">El código ha expirado. Intenta enviar otro código de nuevo.</string>
    <string name="failure_too_many_requests">Ha ocurrido un error. Por favor intenta de nuevo más tarde.</string>

</resources>