<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".additional_features.phone_number.ui.PhoneNumberAddFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                style="@style/Widget.Veggie.AppBarLayout.ButtonImageView"
                android:id="@+id/btn_back"
                android:src="@drawable/ic_arrow_back"
                android:importantForAccessibility="no"
                app:tint="?attr/colorPrimary" />

            <TextView
                style="@style/Widget.Veggie.AppBarLayout.Title"
                android:text="@string/add_phone_number" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="?attr/paddingBig">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_phone_number_description"
                android:layout_marginVertical="?attr/paddingStandard"
                android:maxLines="10" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:startIconDrawable="@drawable/ic_phone_outline"
                app:prefixText="@string/prefix_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_send_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="?attr/paddingStandard"
                android:text="@string/send_sms" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>