<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".additional_features.phone_number.ui.PhoneNumberVerifySmsCodeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                style="@style/Widget.Veggie.AppBarLayout.ButtonImageView"
                android:id="@+id/btn_back"
                android:src="@drawable/ic_arrow_back"
                android:importantForAccessibility="no"
                app:tint="?attr/colorPrimary" />

            <TextView
                style="@style/Widget.Veggie.AppBarLayout.Title"
                android:text="@string/verify_phone_number" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="?attr/paddingBig">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_phone_number_description"
                android:layout_marginVertical="?attr/paddingStandard"
                android:maxLines="10" />

            <EditText
                android:id="@+id/sms_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Veggie.Body1"
                android:textAlignment="center"
                android:hint="@string/sms_code"
                android:inputType="number" />

            <TextView
                android:id="@+id/resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_code"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="?attr/paddingStandard"
                android:layout_marginBottom="?attr/paddingSmall"
                android:maxLines="10" />

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="?attr/paddingStandard"
                android:text="@string/verify" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>